<resources>
    <string name="app_name">Detail Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_upcoming">upcoming</string>
    <string name="title_finished">finished</string>
    <string name="title_favorite">favorite</string>
    <string name="title_setting">setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="judul">Judul</string>
    <string name="summary">Summary</string>
    <string name="owner">Owner</string>
    <string name="category">Kategori</string>
    <string name="kota">Kota</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="kouta">Kuota</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="register">Register</string>
    <string name="data_format">%s - %s</string>
    <string name="search_hint">Search event</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="tidak_ada_favorite">Kamu belum menambahkan favorite</string>
</resources>