<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_foto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@color/teal_200"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_foto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/judul" />

        <TextView
            android:id="@+id/tv_kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_judul"
            app:layout_constraintTop_toBottomOf="@+id/tv_judul"
            tools:text="@string/category"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/tanggal"
            android:textColor="?attr/colorOnSurface"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_kategori"
            app:layout_constraintTop_toBottomOf="@+id/tv_kategori" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_love"
            android:tag="Not Saved"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>